Fixing debug data center alignment regression

--- a/rest/compton_styles/debug.css
+++ b/rest/compton_styles/debug.css
@@ -1,7 +1,3 @@
-body {
-    margin: var(--s-n);
-}
-
 pre {
     max-width: var(--s-maxw);
     font-weight: var(--fw-n);
